--- a/001.html
+++ b/001.html
@@ -7,7 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
- <script  type="text/python" src="python.py" defer></script>
+ <script  type="text/python" src="001.py" defer></script>
 </head>
 <body>
 
