--- a/001.html
+++ b/001.html
@@ -3,11 +3,10 @@
 <head><meta charset="utf-8" />
 
 <title>001磯野家トイレ掃除当番</title>
+        <?PHP
+        echo shell_exec("python 001.py");
+        ?>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
- <script  type="text/python" src="001.py" defer></script>
 </head>
 <body>
 
