--- a/001.html
+++ b/001.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
 <html>
-<head><meta charset="utf-8" />
-
-<title>001磯野家トイレ掃除当番</title>
+    <head>
+        <title>Running a Python script</title>
         <?PHP
         echo shell_exec("python 001.py");
         ?>
-
-</head>
-<body>
-
-</body>
-
- 
-
-
+        </head>
+    <body>
+        <!-- BODY -->
+    </body>
 </html>
