--- a/001.html
+++ b/001.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Running a Python script</title>
+        <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
         <?PHP
         echo shell_exec("python 001.py");
         ?>
