--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 </head>
 <body>
-<a href= "keisanki.html" >計算機</a><BR>
-<a href= "001.html" >磯野家のトイレ当番</a>
+<a href= "keisanki.html" >Monaca Python</a><BR>
+<a href= "001.html" >Colaboratry Python</a>
 </body>
 
 </html>
