--- a/001.html
+++ b/001.html
@@ -1,12 +1,14 @@
-<html>
-    <head>
-        <title>Running a Python script</title>
-        <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-        <?PHP
-        echo shell_exec("python 001.py");
-        ?>
-        </head>
-    <body>
-        <!-- BODY -->
-    </body>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>PyScript Test</title>
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+</head>
+<body>
+<py-script>
+    print('Hello PyScript.')
+</py-script>
+</body>
 </html>
